--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                             alt="https://github.com/rahul-gargcoder" style="width:24px;height:24px;"></a>
                 </div>
             </div>
-            <div class="member-card">
+            <!-- <div class="member-card">
                 <div class="member">
                     <img src="2.jpg" alt="img1">
     
@@ -84,7 +84,7 @@
                                 alt="https://github.com/rahul-gargcoder" style="width:24px;height:24px;"></a>
                     </div>
                 </div>
-         
+          -->
 
 
                 <div class="member-card">
